make footer sticky instead of fixed to not overlap content

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    position: fixed;
+    position: sticky;
     width: 100%;
     bottom: 0;
     background-color: var(--blue);
